# Robot-Arm-3D-scanner

./: README.md
adroit_move/: CMakeLists.txt  README.md  package.xml
adroit_move/config/: basic_control.yaml
adroit_move/launch/: adroit_move.launch  move.launch
adroit_move/nodes/: mover.py
adroit_move/rviz/: basic.rviz
adroit_move/srv/: clear_waypoints.srv  reset.srv  run_once.srv  step.srv
realsense_reader/: CMakeLists.txt  README.md  package.xml
realsense_reader/launch/: read_camera.launch  test.launch
realsense_reader/nodes/: ICP.cpp  pcl_new.cpp  pcl_process.cpp  publish_armstate.py  read_camera.py
realsense_reader/rviz/: basic.rviz
