<?xml version="1.0"?>
<package format="2">
  <name>realsense_reader</name>
  <version>0.0.0</version>
  <description>The realsense_reader package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="zhuoruzhang2021@u.northwestern.edu">shirleyzzr</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>GPLv2</license>

  <!-- Use build_depend for packages you need at compile time: --> 
  <buildtool_depend>catkin</buildtool_depend>
  <!--   <build_depend>message_generation</build_depend> -->
  <build_depend>rospy</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf2_sensor_msgs</build_depend>
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <!-- Use exec_depend for packages you need at runtime: -->
  <exec_depend>rospy</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>libpcl-all</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_sensor_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
